Frontend/src/index.css
@import "tailwindcss";
@custom-variant dark (&:where(.dark, .dark *));

@font-face {
  font-family: "Dana-DemiBold";
  src: url("/src/assets/fonts/Dana/woff2/DanaFaNum-DemiBold.woff2");
}

@font-face {
  font-family: "Dana-Medium";
  src: url("/src/assets/fonts/Dana/woff2/DanaFaNum-Medium.woff2");
}

@font-face {
  font-family: "Dana-Regular";
  src: url("/src/assets/fonts/Dana/woff2/DanaFaNum-Regular.woff2");
}

@font-face {
  font-family: "Morabba-Bold";
  src: url("/src/assets/fonts/Morabba/woff2/Morabba-Bold.woff2");
}

@font-face {
  font-family: "Morabba-Medium";
  src: url("/src/assets/fonts/Morabba/woff2/Morabba-Medium.woff2");
}

@font-face {
  font-family: "Morabba-Light";
  src: url("/src/assets/fonts/Morabba/woff2/Morabba-Light.woff2");
}

@theme {
  /* Fonts */

  /* Dana */
  --font-Dana-Regular: Dana-Regular; /* 400 */
  --font-Dana-Medium: Dana-Medium; /* 500 */
  --font-Dana-DemiBold: Dana-DemiBold; /* 600 */
  /* Morabba */
  --font-Morabba-Medium: Morabba-Medium;
  --font-Morabba-Bold: Morabba-Bold;
  --font-Morabba-Light: Morabba-Light;

  /* Colors */
  --color-primary: #3b82f6;

  --color-secondary-light: oklch(70.4% 0.04 256.788);
  --color-secondary-dark: oklch(55.4% 0.046 257.417);

  /* box shadow */
  --shadow-normal: 0px 1px 10px rgba(0, 0, 0, 0.05);
}

body {
  overflow-x: hidden;
}

@utility container {
  @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8;
}

@layer utilities {
  @keyframes infinite-scroll {
    0% {
      transform: translateX(100%);
    }
    100% {
      transform: translateX(-50%);
    }
  }
  .animate-infinite-scroll {
    animation: infinite-scroll 35s linear infinite;
  }

  .animate-infinite-scroll:hover {
    animation-play-state: paused;
  }
  .cursor {
    animation: blink 1s step-end infinite;
  }

  @keyframes blink {
    0%,
    100% {
      opacity: 1;
    }
    50% {
      opacity: 0;
    }
  }
}

@layer components {
  .circle--blured {
    height: 700px;
    width: 700px;
    background-image: radial-gradient(
      closest-side,
      rgba(65, 144, 255, 0.562),
      transparent
    );
    position: absolute;
    z-index: 1;
  }

  .bg-skill-gradient-light {
    background: linear-gradient(
      to bottom right,
      #f8fafc 10%,
      #e2e8f0 35%,
      #cbd5e1 70%,
      #e2e8f0 85%,
      #f8fafc 100%
    );
  }

  .bg-skill-gradient-dark {
    background: linear-gradient(
      to bottom right,
      #0f172a 10%,
      #132043 35%,
      #213774 70%,
      #1e3167 85%,
      #0f172a 100%
    );
  }

  main {
    /* @apply mt-21; */
  }
}

@custom-variant child (& > *);
@custom-variant child-hover (& > *:hover);

